<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- UI items-->
    <string name="app_name">MDP Grp 2</string>
    <string name="bluetooth">Bluetooth Connection</string>
    <string name="position">Position</string>
    <string name="direction">Direction : </string>
    <string name="x">X : </string>
    <string name="y">Y : </string>
    <string name="challenge1">Find Fastest Route</string>
    <string name="challenge2">Speed Parking</string>
    <string name="robotStatus">Robot Status:</string>
    <string name="receivedText">Received Text:</string>
    <string name="reset">Reset</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device...</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">Connecting...</string>
    <string name="title_connected_to">Connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">Not Connected</string>

    <!--  DeviceListActivity -->
    <string name="disconnected">Disconnected</string>
    <string name="scanning">Scanning for devices...</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="devices_found">Devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="connect_a_device">Connect a device</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>


    <string name="message">Message</string>

    <!--BOTTOM_SHEET-->
    <string name="bottom_sheet_title">TIMERS</string>
    <string name="pause">PAUSE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>