<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/constraintLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="100"
            android:background="@drawable/gradient_background">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ui"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="@id/constraintLayout"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6">

            <com.example.mdpgrp2.MapGrid
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1.2:1"
                app:layout_constraintStart_toStartOf="parent"
                />

            <Button
                android:id="@+id/reset"
                android:layout_width="68dp"
                android:layout_height="62dp"
                android:background="@drawable/grey_box"
                android:text="@string/reset"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="11sp"
                android:textStyle="bold"
                app:iconPadding="0dp"
                app:layout_constraintEnd_toEndOf="@id/map"
                tools:ignore="MissingConstraints,Suspicious0dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_marginTop="50dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@drawable/grey_box" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/position"
                            android:textColor="@color/dark_blue"
                            android:textStyle="bold"
                            android:textSize="11sp"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <RelativeLayout
                                android:id="@+id/xLayout"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/x"
                                    android:textStyle="bold"
                                    android:textColor="@color/dark_blue"
                                    android:textSize="12sp" />

                                <TextView
                                    android:id="@+id/txtX"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:text="-"
                                    android:textColor="@color/dark_blue"
                                    android:textSize="14sp"
                                    android:textStyle="bold" />

                            </RelativeLayout>

                            <RelativeLayout
                                android:id="@+id/yLayout"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/y"
                                    android:textColor="@color/dark_blue"
                                    android:textSize="12sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/txtY"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="-"
                                    android:textStyle="bold"
                                    android:layout_centerInParent="true"
                                    android:textSize="14sp"
                                    android:textColor="@color/dark_blue"/>

                            </RelativeLayout>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@drawable/grey_box"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/direction"
                            android:textColor="@color/dark_blue"
                            android:textStyle="bold"
                            android:textSize="11sp"/>

                        <TextView
                            android:id="@+id/txtDirection"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="-"
                            android:textColor="@color/dark_blue"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:layout_gravity="center"/>

                    </LinearLayout>




                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="vertical"
                    android:background="@drawable/grey_box"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="11sp"
                        android:textColor="@color/dark_blue"
                        android:textStyle="bold"
                        android:text="@string/robotStatus"/>

                    <TextView
                        android:id="@+id/txtRobotStatus"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center" />

                </LinearLayout>

                <FrameLayout
                    android:id="@+id/sample_content_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/grey_box"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp">

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:orientation="vertical"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="30dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintButtons"
                    android:layout_width="match_parent"
                    android:layout_height="250dp">

                    <RelativeLayout
                        android:id="@+id/buttons"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        tools:ignore="MissingConstraints">

                        <ImageButton
                            android:id="@+id/btnUp"
                            android:layout_width="50dp"
                            android:layout_height="50dp"

                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:background="@drawable/grey_box"
                            android:src="@drawable/ic_baseline_arrow_drop_up_24" />

                        <ImageButton
                            android:id="@+id/btnLeft"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_centerVertical="true"
                            android:background="@drawable/grey_box"
                            android:src="@drawable/ic_baseline_arrow_left_24" />

                        <ImageButton
                            android:id="@+id/btnRight"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/grey_box"
                            android:padding="0dp"
                            android:src="@drawable/ic_baseline_arrow_right_24" />

                        <ImageButton
                            android:id="@+id/btnDown"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:background="@drawable/grey_box"
                            android:src="@drawable/ic_baseline_arrow_drop_down_24" />

                    </RelativeLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>